# monoclaw

./: .gitignore  README.md  package-lock.json  sandbox_brew.py  sandbox_finalize_fix.py  sandbox_schg.py  sandbox_test_core.py  sandbox_test_env.py  sandbox_test_env2.py  sandbox_test_provisioner_flow.py  sandbox_test_runner.py  test_script.sh
device-cli/: README.md  pyproject.toml  run.sh
device-cli/mona_hub/: run_server.py
device-cli/mona_hub/backend/: main.py
device-cli/mona_hub/backend/models/: onboarding_state.py
device-cli/mona_hub/backend/routers/: chat.py  onboarding.py  system.py  voice.py
device-cli/mona_hub/backend/services/: chat_history.py  complexity.py  interaction.py  llm.py  mac_config.py  messaging.py  openclaw_config.py  profile.py  tool_router.py  voice.py
device-cli/mona_hub/docs/: STYLE_GUIDE.md
device-cli/mona_hub/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
device-cli/mona_hub/frontend/src/: App.tsx  main.tsx
device-cli/openclaw_setup/: __init__.py  app_builder.py  cli.py  order_fetcher.py  provisioner.py  reporter.py  self_destruct.py
device-cli/openclaw_setup/test_suite/: __init__.py  base.py  hardware.py  llm_tests.py  macos_env.py  openclaw_core.py  runner.py  security.py  stress_edge.py  voice.py
device-cli/scripts/: Run OpenClaw Setup.command  run-setup.sh
tools/01-real-estate/: README.md  config.yaml  pyproject.toml
tools/01-real-estate/real_estate/: __init__.py  app.py  database.py  seed_data.py
tools/01-real-estate/real_estate/listing_sync/: __init__.py  routes.py
tools/01-real-estate/real_estate/property_gpt/: __init__.py  hk_utils.py  routes.py
tools/01-real-estate/real_estate/tenancy_doc/: __init__.py  routes.py
tools/01-real-estate/real_estate/viewing_bot/: __init__.py  routes.py
tools/01-real-estate/tests/: conftest.py  test_database.py
tools/01-real-estate/tests/test_listing_sync/: test_images.py
tools/01-real-estate/tests/test_property_gpt/: test_hk_utils.py
tools/01-real-estate/tests/test_tenancy_doc/: test_hkid.py  test_stamp_duty.py
tools/01-real-estate/tests/test_viewing_bot/: test_scheduling.py
tools/02-immigration/: README.md  config.yaml  pyproject.toml
tools/02-immigration/immigration/: __init__.py  app.py  database.py  seed_data.py
tools/02-immigration/immigration/client_portal/: routes.py
tools/02-immigration/immigration/form_autofill/: __init__.py  routes.py
tools/02-immigration/immigration/policy_watcher/: routes.py
tools/02-immigration/immigration/visa_doc_ocr/: __init__.py  routes.py
tools/02-immigration/tests/: conftest.py  test_database.py
tools/02-immigration/tests/test_client_portal/: test_status.py
tools/02-immigration/tests/test_form_autofill/: test_forms.py
tools/02-immigration/tests/test_policy_watcher/: test_differ.py
tools/02-immigration/tests/test_visa_doc_ocr/: test_completeness.py  test_hkid.py
tools/03-fnb-hospitality/: README.md  config.yaml  pyproject.toml
tools/03-fnb-hospitality/fnb_hospitality/: __init__.py  app.py  database.py  seed_data.py
tools/03-fnb-hospitality/fnb_hospitality/no_show_shield/: routes.py
tools/03-fnb-hospitality/fnb_hospitality/queue_bot/: routes.py
tools/03-fnb-hospitality/fnb_hospitality/sommelier_memory/: routes.py
tools/03-fnb-hospitality/fnb_hospitality/table_master/: routes.py
tools/03-fnb-hospitality/tests/: conftest.py  test_database.py
tools/03-fnb-hospitality/tests/test_no_show_shield/: test_confirmation.py  test_scoring.py  test_waitlist.py
tools/03-fnb-hospitality/tests/test_queue_bot/: test_estimator.py  test_notifications.py  test_queue.py
tools/03-fnb-hospitality/tests/test_sommelier_memory/: test_allergies.py  test_briefings.py  test_profiles.py
tools/03-fnb-hospitality/tests/test_table_master/: test_booking.py  test_channels.py  test_conflict.py
tools/04-accounting/: README.md  config.yaml  pyproject.toml
tools/04-accounting/accounting/: __init__.py  app.py  database.py  seed_data.py
tools/04-accounting/accounting/fx_tracker/: routes.py
tools/04-accounting/accounting/invoice_ocr/: routes.py
tools/04-accounting/accounting/reconcile_agent/: __init__.py  routes.py
tools/04-accounting/accounting/tax_calendar/: routes.py
tools/05-legal/: README.md  config.yaml  pyproject.toml
tools/05-legal/legal/: __init__.py  app.py  database.py  seed_data.py
tools/05-legal/legal/deadline_guardian/: __init__.py  business_days.py  calendar_export.py  court_deadlines.py  limitation.py  reminder_engine.py  routes.py
tools/05-legal/legal/discovery_assistant/: __init__.py  deduplicator.py  (+6 more)
tools/05-legal/tests/: conftest.py
tools/06-medical-dental/: README.md  config.yaml  pyproject.toml
tools/06-medical-dental/medical_dental/: __init__.py  app.py  database.py  seed_data.py
tools/06-medical-dental/tests/: conftest.py  test_database.py
tools/07-construction/: README.md  config.yaml  pyproject.toml
tools/07-construction/construction/: __init__.py  app.py  database.py  seed_data.py
tools/07-construction/tests/: conftest.py
tools/08-import-export/: README.md  config.yaml  pyproject.toml
tools/08-import-export/import_export/: __init__.py  app.py  database.py  seed_data.py
tools/09-academic/: README.md  config.yaml  pyproject.toml
tools/09-academic/academic/: __init__.py  app.py  database.py  seed_data.py
tools/09-academic/tests/: __init__.py
tools/10-vibe-coder/: README.md  config.yaml  pyproject.toml
tools/10-vibe-coder/tests/: __init__.py
tools/10-vibe-coder/vibe_coder/: __init__.py  app.py  database.py  seed_data.py
tools/11-solopreneur/: README.md  config.yaml  pyproject.toml
tools/11-solopreneur/solopreneur/: app.py  database.py  seed_data.py
tools/12-student/: README.md  config.yaml  pyproject.toml
tools/12-student/student/: __init__.py  app.py  database.py  seed_data.py
tools/12-student/tests/: conftest.py  test_database.py
tools/shared/: README.md  pyproject.toml
tools/shared/openclaw_shared/: __init__.py  auth.py  config.py  database.py  export.py  health.py  logging.py  mona_events.py
(+1149 files in other folders)
