[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-setup"
version = "1.0.0"
description = "MonoClaw device provisioning and testing CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
    "supabase>=2.0",
    "pydantic>=2.0",
]

[project.scripts]
openclaw-setup = "openclaw_setup.cli:main"

[tool.setuptools.packages.find]
include = ["openclaw_setup*"]
