[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-accounting"
version = "1.0.0"
description = "Accounting Dashboard — InvoiceOCR Pro, ReconcileAgent, FXTracker, TaxCalendar Bot"
requires-python = ">=3.11"
dependencies = [
    "openclaw-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "psutil>=5.9",
    # OCR / InvoiceOCR
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "pdf2image>=1.16",
    "pdfplumber>=0.11",
    # Data processing
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    # Matching / ReconcileAgent
    "rapidfuzz>=3.6",
    "ofxparse>=0.21",
    # Reports
    "reportlab>=4.1",
    # Calendar / TaxCalendar
    "icalendar>=5.0",
    "python-dateutil>=2.9",
    "workalendar>=17.0",
    # Charts / FXTracker
    "matplotlib>=3.8",
]

[project.optional-dependencies]
mlx = ["openclaw-shared[mlx]"]
messaging = ["openclaw-shared[messaging]"]
macos = ["pyobjc-framework-Vision>=10.0"]
xero = ["xero-python>=3.0"]
quickbooks = ["python-quickbooks>=0.9"]
all = ["openclaw-accounting[mlx,messaging,macos,xero,quickbooks]"]

[tool.setuptools.packages.find]
include = ["accounting*"]
