[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-legal"
version = "1.0.0"
description = "Legal Dashboard — LegalDoc Analyzer, DeadlineGuardian, DiscoveryAssistant, IntakeBot"
requires-python = ">=3.11"
dependencies = [
    "openclaw-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "psutil>=5.9",
    "python-dateutil>=2.9",
    # LegalDoc Analyzer — document parsing
    "python-docx>=1.1",
    "PyPDF2>=3.0",
    "pdfplumber>=0.11",
    # DiscoveryAssistant — full-text search
    "whoosh>=2.7",
    "chardet>=5.2",
    # IntakeBot — fuzzy name matching
    "rapidfuzz>=3.6",
    "pypinyin>=0.51",
    # DeadlineGuardian — calendar export
    "icalendar>=5.0",
    # Export / document generation
    "openpyxl>=3.1",
    "reportlab>=4.1",
]

[project.optional-dependencies]
mlx = ["openclaw-shared[mlx]"]
messaging = ["openclaw-shared[messaging]"]
macos = ["pyobjc-framework-Vision>=10.0"]
all = ["openclaw-legal[mlx,messaging,macos]"]

[tool.setuptools.packages.find]
include = ["legal*"]
