[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-import-export"
version = "1.0.0"
description = "Import/Export Dashboard — TradeDoc AI, SupplierBot, FXInvoice, StockReconcile"
requires-python = ">=3.11"
dependencies = [
    "openclaw-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "psutil>=5.9",
    # Document generation
    "reportlab>=4.1",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "PyPDF2>=3.0",
    "Pillow>=10.0",
    # Matching / search
    "rapidfuzz>=3.6",
    # FX charts
    "plotly>=5.18",
    # Date parsing
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
mlx = ["openclaw-shared[mlx]"]
messaging = ["openclaw-shared[messaging]"]
macos = ["pyobjc-framework-Vision>=10.0"]
all = ["openclaw-import-export[mlx,messaging,macos]"]

[tool.setuptools.packages.find]
include = ["import_export*"]
